update architect msg queue

--- a/setup/mq_setup/.env.example
+++ b/setup/mq_setup/.env.example
@@ -19,16 +19,26 @@ RABBITMQ_CONSUMER_PASS=<from_password_file>
 RABBITMQ_WORKER_USER=checking_worker
 RABBITMQ_WORKER_PASS=<from_password_file>
 
+RABBITMQ_DISPATCHER_USER=checking_dispatcher
+RABBITMQ_DISPATCHER_PASS=<from_password_file>
+
+RABBITMQ_RESULT_CONSUMER_USER=checking_result_consumer
+RABBITMQ_RESULT_CONSUMER_PASS=<from_password_file>
+
 RABBITMQ_MONITOR_USER=monitor_user
 RABBITMQ_MONITOR_PASS=<from_password_file>
 
 # Exchange and Queue Names
 RABBITMQ_EXCHANGE=caldera.checking.exchange
 RABBITMQ_INSTRUCTIONS_QUEUE=caldera.checking.instructions
+RABBITMQ_API_TASKS_QUEUE=caldera.checking.api.tasks
+RABBITMQ_AGENT_TASKS_QUEUE=caldera.checking.agent.tasks
 RABBITMQ_API_RESPONSES_QUEUE=caldera.checking.api.responses
 RABBITMQ_AGENT_RESPONSES_QUEUE=caldera.checking.agent.responses
 
 # Routing Keys
 ROUTING_KEY_EXECUTION_RESULT=caldera.execution.result
+ROUTING_KEY_API_TASK=checking.api.task
+ROUTING_KEY_AGENT_TASK=checking.agent.task
 ROUTING_KEY_API_RESPONSE=checking.api.response
 ROUTING_KEY_AGENT_RESPONSE=checking.agent.response
