checkpoint 2: complete exec consumer + dispatch publish

--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,48 @@ DEBUG=true
 HOST=0.0.0.0
 PORT=1337
 
-# RabbitMQ Configuration (for later phases)
+# RabbitMQ Configuration
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
 RABBITMQ_VHOST=/caldera_checking
-RABBITMQ_USERNAME=checking_consumer
-RABBITMQ_PASSWORD=your_password_here
+RABBITMQ_MANAGEMENT_PORT=15672
+
+# User Credentials (update with actual passwords)
+RABBITMQ_ADMIN_USER=caldera_admin
+RABBITMQ_ADMIN_PASS=haha
+
+RABBITMQ_PUBLISHER_USER=caldera_publisher
+RABBITMQ_PUBLISHER_PASS=hihi
+
+RABBITMQ_CONSUMER_USER=checking_consumer
+RABBITMQ_CONSUMER_PASS=hehe
+
+RABBITMQ_WORKER_USER=checking_worker
+RABBITMQ_WORKER_PASS=huhu
+
+RABBITMQ_DISPATCHER_USER=checking_dispatcher
+RABBITMQ_DISPATCHER_PASS=hoho
+
+RABBITMQ_RESULT_CONSUMER_USER=checking_result_consumer
+RABBITMQ_RESULT_CONSUMER_PASS=hichic
+
+RABBITMQ_MONITOR_USER=monitor_user
+RABBITMQ_MONITOR_PASS=huhhuh
+
+# Exchange and Queue Names
+RABBITMQ_EXCHANGE=caldera.checking.exchange
+RABBITMQ_INSTRUCTIONS_QUEUE=caldera.checking.instructions
+RABBITMQ_API_TASKS_QUEUE=caldera.checking.api.tasks
+RABBITMQ_AGENT_TASKS_QUEUE=caldera.checking.agent.tasks
+RABBITMQ_API_RESPONSES_QUEUE=caldera.checking.api.responses
+RABBITMQ_AGENT_RESPONSES_QUEUE=caldera.checking.agent.responses
+
+# Routing Keys
+ROUTING_KEY_EXECUTION_RESULT=caldera.execution.result
+ROUTING_KEY_API_TASK=checking.api.task
+ROUTING_KEY_AGENT_TASK=checking.agent.task
+ROUTING_KEY_API_RESPONSE=checking.api.response
+ROUTING_KEY_AGENT_RESPONSE=checking.agent.response
 
 # Logging
 LOG_LEVEL=INFO
