--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,6 @@ ROUTING_KEY_AGENT_RESPONSE=checking.agent.response
 
 # Logging
 LOG_LEVEL=INFO
+
+MOCK_API_KEY=M0ck_aP1_k3y
+MOCK_API_URL=siem.haha.com
